[gd_scene load_steps=13 format=2]

[ext_resource path="res://HandWriting.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/fase3.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 35
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="DynamicFont" id=6]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="fase3" type="Node2D"]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 166.0
margin_top = 45.0
margin_right = 895.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 1 )
text = "quantos godots tem na tela?"
align = 1
autowrap = true

[node name="Label2" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 39.0
margin_top = 59.0
margin_right = 101.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 1 )
text = "3 )"
align = 1
autowrap = true

[node name="alternativa1" type="Button" parent="."]
margin_left = 201.0
margin_top = 127.0
margin_right = 335.0
margin_bottom = 193.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "5"
icon_align = 1
expand_icon = true

[node name="alternativa4" type="Button" parent="."]
margin_left = 371.0
margin_top = 125.0
margin_right = 509.0
margin_bottom = 193.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "27"
icon_align = 1
expand_icon = true

[node name="alternativa3" type="Button" parent="."]
margin_left = 735.0
margin_top = 119.0
margin_right = 884.0
margin_bottom = 194.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "muitos"
icon_align = 1
expand_icon = true

[node name="alternativa2" type="Button" parent="."]
margin_left = 551.0
margin_top = 122.0
margin_right = 687.0
margin_bottom = 194.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "432"
icon_align = 1
expand_icon = true

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 232, 293 )
scale = Vector2( 6.20313, 2.64063 )
texture = ExtResource( 3 )

[node name="Icon6" type="Sprite" parent="."]
position = Vector2( 288, 425 )
scale = Vector2( 6.20313, 2.64063 )
texture = ExtResource( 3 )

[node name="Icon2" type="Sprite" parent="."]
position = Vector2( 457, 241 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon9" type="Sprite" parent="."]
position = Vector2( 51.2969, 444 )
scale = Vector2( 1.17188, 2.3125 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon7" type="Sprite" parent="."]
position = Vector2( 874, 348 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon24" type="Sprite" parent="."]
position = Vector2( 874, 415 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon25" type="Sprite" parent="."]
position = Vector2( 873, 279 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon8" type="Sprite" parent="."]
position = Vector2( 722, 323 )
scale = Vector2( 3.07813, 2.57813 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon20" type="Sprite" parent="."]
position = Vector2( 690, 454 )
scale = Vector2( 1.60864, 1.35156 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon26" type="Sprite" parent="."]
position = Vector2( 689, 533.875 )
scale = Vector2( 1.60864, 1.00391 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon21" type="Sprite" parent="."]
visible = false
position = Vector2( 832.915, 488.875 )
scale = Vector2( 2.92525, 2.37891 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon22" type="Sprite" parent="."]
position = Vector2( 920, 298 )
scale = Vector2( 0.345801, 2.2207 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon23" type="Sprite" parent="."]
position = Vector2( 921, 441 )
scale = Vector2( 0.345801, 2.2207 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon11" type="Sprite" parent="."]
position = Vector2( 503.263, 465.75 )
scale = Vector2( 0.608642, 3.14844 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon13" type="Sprite" parent="."]
position = Vector2( 556.297, 380.125 )
scale = Vector2( 1.17188, 0.433594 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon14" type="Sprite" parent="."]
position = Vector2( 557, 411 )
scale = Vector2( 1.17188, 0.433594 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon15" type="Sprite" parent="."]
position = Vector2( 554, 440 )
scale = Vector2( 1.17188, 0.433594 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon16" type="Sprite" parent="."]
position = Vector2( 557, 470 )
scale = Vector2( 1.17188, 0.433594 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon17" type="Sprite" parent="."]
position = Vector2( 556, 498 )
scale = Vector2( 1.17188, 0.433594 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon18" type="Sprite" parent="."]
position = Vector2( 552, 523 )
scale = Vector2( 1.17188, 0.433594 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon19" type="Sprite" parent="."]
position = Vector2( 555, 548 )
scale = Vector2( 1.17188, 0.433594 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon12" type="Sprite" parent="."]
position = Vector2( 619, 465 )
scale = Vector2( 0.608642, 3.14844 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon4" type="Sprite" parent="."]
position = Vector2( 471, 314 )
scale = Vector2( 1.65625, 1.29688 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon3" type="Sprite" parent="."]
position = Vector2( 621, 362 )
scale = Vector2( 7.23438, 0.1875 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon27" type="Sprite" parent="."]
position = Vector2( 574, 307 )
scale = Vector2( 2.07238, 1.41406 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon10" type="Sprite" parent="."]
position = Vector2( 208, 529 )
scale = Vector2( 7.23438, 0.578125 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Icon5" type="Sprite" parent="."]
position = Vector2( 537, 345 )
scale = Vector2( 0.521972, 0.375 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="certo" type="Button" parent="."]
margin_left = 35.0
margin_top = 58.0
margin_right = 123.0
margin_bottom = 113.0
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "1"
icon_align = 1
expand_icon = true

[connection signal="pressed" from="alternativa1" to="." method="_on_alternativa1_pressed"]
[connection signal="pressed" from="alternativa4" to="." method="_on_alternativa4_pressed"]
[connection signal="pressed" from="alternativa3" to="." method="_on_alternativa3_pressed"]
[connection signal="pressed" from="alternativa2" to="." method="_on_alternativa2_pressed"]
[connection signal="pressed" from="certo" to="." method="_on_certo_pressed"]
